qualche correzione per rendering mobile

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -32,8 +32,9 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .intro-section {
-    height: 100%;
+    /* height: 100%; */
     padding-top: 150px;
+    padding-bottom: 150px;
     background: #eee;
 }
 
@@ -46,18 +47,19 @@ of those sections to manage the look and feel of the site. */
 }
 
 .about-section {
-    height: 100%;
+    /* height: 100%; */
     padding-top: 150px;
 }
 
 .services-section {
-    height: 100%;
+    /* height: 100%; */
     padding-top: 150px;
 }
 
 .contact-section {
-    height: 100%;
+    /* height: 100%; */
     padding-top: 150px;
+    padding-bottom: 150px;
 }
 
 #footer {
